--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,19 @@ spring:
   batch:
     job:
       names: ${job.name:NONE}
-  main:
-    allow-bean-definition-overriding: true
-  datasource:
-    url: jdbc:mysql://localhost:3306/spring_batch
-    username: root
-    password: password
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      connection-timeout: 3000
-      maximum-pool-size: 10
-      max-lifetime: 10000
-      pool-name: HikariCP
+#  main:
+#    allow-bean-definition-overriding: true
+#  jpa:
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    database: mysql
+#    generate-ddl: false
+#    show-sql: true
+
+#logging:
+#  level:
+#    org.springframework.web : debug
+#    sql: debug
+#    jdbc: debug
+#    jdbc.sqlonly: debug
